--- a/Styles/style.css
+++ b/Styles/style.css
@@ -27,6 +27,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin: 0 200px;
 }
 nav > ul {
   display: flex;
@@ -39,4 +40,18 @@ nav li {
 nav li a {
   text-decoration: none;
   color: #474747;
+}
+
+/* Header Section  */
+header {
+  background-color: #fff8f3;
+}
+.banner {
+  padding: 30px 30px 30px 150px;
+  display: flex;
+  align-items: center;
+}
+.banner .profile-pic {
+  width: 584px;
+  height: 676px;
 }
