--- a/Styles/style.css
+++ b/Styles/style.css
@@ -2,8 +2,9 @@
 * {
   font-family: "Lato", sans-serif;
   font-family: "Open Sans", sans-serif;
+  margin: 0;
+  padding: 0;
 }
-
 .text-primary {
   color: #fd6e0a;
 }
@@ -15,6 +16,12 @@
   font-weight: 700;
   padding: 15px 35px;
   color: #fff;
+}
+.section-title {
+  color: #181818;
+  text-align: center;
+  font-size: 35px;
+  font-weight: 700;
 }
 
 /* Navigation section */
@@ -28,6 +35,7 @@ nav {
   align-items: center;
   justify-content: space-between;
   margin: 0 200px;
+  padding-top: 40px;
 }
 nav > ul {
   display: flex;
@@ -47,11 +55,61 @@ header {
   background-color: #fff8f3;
 }
 .banner {
-  padding: 30px 30px 30px 150px;
+  padding: 30px 30px 0 150px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  background-image: url("../images/header_bg.png");
+  background-repeat: no-repeat;
+  background-position: bottom right;
 }
 .banner .profile-pic {
-  width: 584px;
-  height: 676px;
+  width: 534px;
+  height: 625px;
+}
+.banner-greeting {
+  font-size: 45px;
+  font-weight: 600;
+}
+.banner-title {
+  font-size: 85px;
+  font-weight: 700;
+}
+.banner-content .header-text {
+  font-size: 18px;
+  font-weight: 400;
+  margin: 30px 0;
+}
+.banner-content {
+  max-width: 500px;
+}
+
+/* main section  */
+main {
+  max-width: 1140px;
+  margin: 0 auto;
+}
+
+/* About Section  */
+
+.about {
+  margin: 130px;
+  border-radius: 10px;
+  background: #fff8f3;
+  padding: 130px 156px;
+}
+.section-description {
+  color: #757575;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+  margin: 30px 0;
+}
+.about-info-container {
+  display: flex;
+  justify-content: space-around;
+  color: #757575;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
 }
