--- a/Styles/style.css
+++ b/Styles/style.css
@@ -93,15 +93,15 @@ main {
 /* About Section  */
 
 .about {
-  margin: 130px;
+  margin: 130px 0;
   border-radius: 10px;
   background: #fff8f3;
-  padding: 130px 156px;
+  padding: 130px 150px;
 }
 .section-description {
   color: #757575;
   text-align: center;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 400;
   margin: 30px 0;
 }
@@ -110,6 +110,28 @@ main {
   justify-content: space-around;
   color: #757575;
   text-align: center;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+/* Skill Section  */
+
+.skill-container {
+  display: flex;
+  justify-content: space-around;
+}
+.skill {
+  width: 250px;
+  padding: 30px 33px;
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+.skill-title {
+  margin: 25px 0;
+}
+.skill-description {
+  color: #757575;
   font-size: 16px;
   font-weight: 400;
 }
