--- a/Styles/style.css
+++ b/Styles/style.css
@@ -89,6 +89,9 @@ main {
   max-width: 1140px;
   margin: 0 auto;
 }
+main section {
+  margin-bottom: 130px;
+}
 
 /* About Section  */
 
@@ -119,10 +122,12 @@ main {
 .skill-container {
   display: flex;
   justify-content: space-around;
+  gap: 24px;
 }
 .skill {
   width: 250px;
   padding: 30px 33px;
+
   border-radius: 5px;
   background: #fff;
   box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
@@ -134,4 +139,47 @@ main {
   color: #757575;
   font-size: 16px;
   font-weight: 400;
+}
+
+/* Resume Section  */
+.resume-title {
+  color: var#181818;
+  text-align: center;
+  font-size: 35px;
+  font-weight: 700;
+  margin-bottom: 50px;
+}
+.resume-item {
+  margin: 0 20px 30px 0;
+}
+.resume-container {
+  display: flex;
+  gap: 40px;
+}
+.resume-column-title {
+  color: #474747;
+  font-size: 28px;
+  font-weight: 700;
+  margin: 40px 0;
+}
+.resume-item-title {
+  color: #474747;
+  font-size: 22px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+.resume-item-institute {
+  color: #757575;
+  font-size: 16px;
+  font-weight: 600;
+}
+.resume-item-description {
+  color: #757575;
+  font-size: 15px;
+  font-weight: 400;
+  margin: 30px 0;
+}
+.download-cv {
+  text-align: center;
+  margin-top: 30px;
 }
