--- a/Styles/style.css
+++ b/Styles/style.css
@@ -23,6 +23,9 @@
   font-size: 35px;
   font-weight: 700;
 }
+.btn-primary:hover {
+  cursor: pointer;
+}
 
 /* Navigation section */
 .nav-title {
@@ -182,4 +185,39 @@ main section {
 .download-cv {
   text-align: center;
   margin-top: 30px;
+}
+
+/* Footer Style  */
+footer {
+  display: flex;
+  background: #fff8f3;
+  padding: 130px 230px;
+  gap: 100px;
+}
+footer .footer-column {
+  width: 50%;
+}
+.footer-column-title {
+  color: #181818;
+  font-size: 35px;
+  font-weight: 700;
+}
+.footer-column-description {
+  color: #474747;
+  font-weight: 400;
+  margin: 30px 0;
+}
+.contact input[type="text"],
+.contact input[type="email"],
+textarea {
+  display: block;
+  width: 100%;
+  padding: 18px 30px;
+  margin: 30px 0;
+  border-radius: 5px;
+  background: #fff;
+  border: 0;
+}
+.footer-icon a {
+  margin-left: 25px;
 }
